# KinectCPP

./: .gitignore  README.md
Depth2XYZ/: CMakeLists.txt
Depth2XYZ/src/: Depth2XYX.cpp  PlyFunctions.cpp  PlyFunctions.h  Transformation.cpp  plyFunctions.cpp  plyFunctions.h
Depth2XYZ/utils/: PlyFunctions.cpp  Transformation.h
SampleImages/: CMakeLists.txt
SampleImages/src/: SampleImages.cpp
SampleImages/utils/: CMakeLists.txt  GetImageList.cpp  GetImageList.h
ServerClientComm/: CMakeLists.txt
ServerClientComm/src/: Client.cpp  ExecuteCommand.cpp  GetDateTime.cpp  HostMaskIp.cpp  ProtonectClient.cpp  Server.cpp
